--- a/suit website/index.html
+++ b/suit website/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ROYAL SUITS</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="Your Input will always dictate your output, ✨If you input positive things, you will get positive outcome✨.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
   <header class="header"> 
@@ -14,7 +14,7 @@
     <div class="menu-icon" id="menu-icon">&#9776;</div>
     <div id="menu">
       <a href="index.html">Home</a>
-      <a href="About us.html">About us</a>
+      <a href="about us.html">About us</a>
       <a href="Our store.html">Our store</a>
       <a href="size Guidlines.html">Size Guidlines</a>
     </div>
