--- a/suit website/index.html
+++ b/suit website/index.html
@@ -14,7 +14,7 @@
     <div class="menu-icon" id="menu-icon">&#9776;</div>
     <div id="menu">
       <a href="index.html">Home</a>
-      <a href="about us.html">About us</a>
+      <a href="contact.html">About us</a>
       <a href="Our store.html">Our store</a>
       <a href="size Guidlines.html">Size Guidlines</a>
     </div>
@@ -36,10 +36,14 @@
   <!-- Responsive text container -->
   <section class="landing-text">
     <h3>We deliver anywhere in the world</h3>
-    <h2>Visit our store</h2>
-    <p>
-      They say beauty is in the eyes of the beholder. Visit us, and let your eyes truly decide.
+    <br>
+    <h2 class="store">Visit our store</h2>
+    <p class="space">
+      They say beauty is in the eyes of the beholder. Visit us, and let your eyes decide what true beauty means.
     </p>
+    <a href="ourstore.html" class="read more"> Read more</a>
+    <hr>
+    <h2></h2>
   </section>
 
   <script>
