--- a/suit website/index.html
+++ b/suit website/index.html
@@ -2,56 +2,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ROYAL SUITS</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.png" type="image/png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ROYAL SUITS</title>
+    <link rel="stylesheet" href="style.css">
+    <!--the below is the favicon aka, the logo for the website-->
+    <link  rel="icon" href="Your Input will always dictate your output, ✨If you input positive things, you will get positive outcome✨.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
-  <header class="header"> 
-    <img src="ROYAL SUITS.png" alt="Royal SUITS">
-    <div class="menu-icon" id="menu-icon">&#9776;</div>
-    <div id="menu">
-      <a href="index.html">Home</a>
-      <a href="contact.html">About us</a>
-      <a href="Our store.html">Our store</a>
-      <a href="size Guidlines.html">Size Guidlines</a>
+<body> 
+<header class="header"> <img src="ROYAL SUITS.png" alt="Royal SUITS">
+<div class="menu-icon" id="menu-icon">&#9776;</div>
+<div id="menu">
+    <a href="index.html">Home</a>
+    <a href="contact.html">Contact Us</a>
+    <a href="Our store.html">Our store</a>
+    <a href="size Guidlines.html">Size Guidlines</a>
+</div>
+</header>
+
+<h2>SUIT CATEGORIES</h2>
+<div class="CATEGORIES">
+    <div class="category-card"><a href="Double-breasted.html">
+        <div class="image-frame"> <img src="IMG_7644.jpeg" alt="Double-breasted"></div>
+    </a>
+    <span class="Names">Double-breasted</span>
     </div>
-  </header>
 
-  <h2>SUIT CATEGORIES</h2>
-
-  <div class="CATEGORIES">
-    <!-- Repeat your category cards here as before -->
-    <div class="category-card">
-      <a href="Double-breasted.html">
-        <div class="image-frame"><img src="IMG_7644.jpeg" alt="Double-breasted"></div>
-      </a>
-      <span class="Names">Double-breasted</span>
+    <div class="category-card"><a href="Three-piece.html">
+        <div class="image-frame"> <img src="IMG_7653.jpeg" alt="Three-piece"></div>
+    </a>
+    <span class="Names">Three-piece</span>
     </div>
-    <!-- Add all other category-cards here -->
-  </div>
 
-  <!-- Responsive text container -->
-  <section class="landing-text">
-    <h3>We deliver anywhere in the world</h3>
-    <br>
-    <h2 class="store">Visit our store</h2>
-    <p class="space">
-      They say beauty is in the eyes of the beholder. Visit us, and let your eyes decide what true beauty means.
-    </p>
-    <a href="ourstore.html" class="read more"> Read more</a>
+    <div class="category-card"><a href="Tuxedo.html">
+        <div class="image-frame"> <img src="IMG_7656.jpeg" alt="Tuxedo"></div>
+    </a>
+    <span class="Names">Tuxedo</span>
+    </div>
+
+    <div class="category-card"><a href="Two-piece.html">
+        <div class="image-frame"> <img src="IMG_7655.jpeg" alt="Two-piece"></div>
+    </a>
+    <span class="Names">Two-piece</span>
+    </div>
+
+    <div class="category-card"><a href="Corporate shirts.html">
+        <div class="image-frame"> <img src="IMG_7657.jpeg" alt="Corporate shirts"></div>
+    </a>
+    <span class="Names">Corporate shirts</span>
+    </div>
+
+    <div class="category-card"><a href="Ties.html">
+        <div class="image-frame"> <img src="IMG_7677.jpeg" alt="Ties"></div>
+    </a>
+    <span class="Names">Ties</span>
+    </div>
+</div>
+
+<section class="landing text"><h3> We deliver anywhere in the world</h3>
+<br>
+<h2 class="store"> Visit Our Store </h2>
+
+<p class="space"> They say beauty is in the eyes of the beholder so visit us, and let your eyes
+      decide what true beauty means.
+
+</p>
+
+<a href="Our store.html" class="read-more">Read More</a>
+<hr>
+
+<h2 class="Guidlines">Size Guidlines</h2>
+<p class="space"> At Royal Suits we dont aim to sell, we make sure our customers get the right fit. 
+    We cretaed a guidline section so customers can best pick their size.
+    If you don't know it no need to panic, We are always here to help.  </p>
+
+    <a href="Our store.html" class="read-more">Read More</a>
     <hr>
-    <h2></h2>
-  </section>
+    <h2>Contact us</h2>
+    <div class="container">
+    <a href="https://wa.me/2349077442313" target="_blank" class="whatsapp-link">
+        <img src="IMG_7674.jpeg"  class="icon" alt="chat on whatsapp">
+    </a>
+    <a href="tel:2348143721469" target="_blank" class="telephone">
+        <img src="IMG_7676.jpeg" class="icon" alt="call us">
+    </a>
+    </div>
+</section>
 
-  <script>
-    const menuIcon = document.getElementById('menu-icon');
-    const menu = document.getElementById('menu');
-    menuIcon.addEventListener("click", () => {
-      menu.classList.toggle("show");
-    });
-  </script>
+<script> 
+const menuIcon = document.getElementById('menu-icon');
+const menu = document.getElementById('menu');
+
+menuIcon.addEventListener("click", () => {
+    menu.classList.toggle("show");
+});
+</script>
+
 </body>
 </html>
