--- a/Double breasted/index.html
+++ b/Double breasted/index.html
@@ -12,13 +12,13 @@
     <div class="CATEGORIES">
         <div class="category-card">
             <div class="image-frame">
-                <img src="IMG_7644.jpeg" alt="Double-breasted" class="main-image">
+                <img src="images/IMG_7644.jpeg" alt="Double-breasted" class="main-image">
             </div>
             <div class="color-palette">
-                <div class="swatch" data-color="IMG_7678.jpeg" style="background-color: white;"></div>
-                <div class="swatch" data-color="IMG_7680.Jpeg" style="background-color: lightblue;"></div>
-                <div class="swatch" data-color="IMG_7678.jpeg" style="background-color: darkblue;"></div>
-                <div class="swatch" data-color="IMG_7679.jpeg" style="background-color: beige;"></div>
+                <div class="swatch" data-color="images/IMG_7655.jpeg" style="background-color: white;"></div>
+                <div class="swatch" data-color="images/IMG_7656.jpeg" style="background-color: lightblue;"></div>
+                <div class="swatch" data-color="images/IMG_7678.jpeg" style="background-color: darkblue;"></div>
+                <div class="swatch" data-color="images/IMG_7679.jpeg" style="background-color: beige;"></div>
             </div>
             <span class="Names">Double-breasted</span>
         </div>
