--- a/Double breasted/index.html
+++ b/Double breasted/index.html
@@ -20,12 +20,12 @@
                 <div class="swatch" data-color="images/IMG_7678.jpeg" style="background-color: darkblue;"></div>
                 <div class="swatch" data-color="images/IMG_7679.jpeg" style="background-color: beige;"></div>
             </div>
-            <span class="Names">Double-breasted</span>
+            <span class="Names"> Rivolli striped Double...</span>
         </div>
 
         <div class="category-card">
             <div class="image-frame">
-                <img src="IMG_7644.jpeg" alt="Double-breasted">
+                <img src="images/IMG_7701.jpeg" alt="Double-breasted">
             </div>
             <span class="Names">Double-breasted</span>
         </div>
