--- a/Double breasted/index.html
+++ b/Double breasted/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../suit website/style.css">
 </head>
 <body>
-    <h2 class="breasted">Double Breasted</h2>
+    <h2 class="breasted"> DOUBLE BREASTED</h2>
 
     <div class="CATEGORIES">
         <div class="category-card">
@@ -210,7 +210,7 @@
             </div>
             <button class="arrow right"> &rsaquo;</button>
             </div>
-            <span class="Names"> </span>
+            <span class="Names"></span>
         </div>
 
 
