--- a/Double breasted/index.html
+++ b/Double breasted/index.html
@@ -15,7 +15,8 @@
                 <img src="images/IMG_7644.jpeg" alt="Double-breasted" class="main-image">
             </div>
             <div class="dots-container"></div>
-            <span class="Names"> Rivolli striped suit</span>
+            <span class="Names"> Rivolli Pinestriped suit</span>
+            
         </div>
 
 
@@ -111,7 +112,7 @@
             </div>
             <div class="dots-container">
             </div>
-            <span class="Names"></span>
+            <span class="Names"> Pinstripe suit</span>
         </div>
 
 
