--- a/suit website/index.html
+++ b/suit website/index.html
@@ -23,7 +23,7 @@
 
 <h2>SUIT CATEGORIES</h2>
 <div class="CATEGORIES">
-    <div class="category-card"><a href="index.html">
+    <div class="category-card"><a href="../Double breasted/index.html">
         <div class="image-frame"> <img src="IMG_7644.jpeg" alt="Double-breasted"></div>
     </a>
     <span class="Names">Double-breasted</span>
