--- a/suit website/index.html
+++ b/suit website/index.html
@@ -29,7 +29,7 @@
     <span class="Names">Double-breasted</span>
     </div>
 
-    <div class="category-card"><a href="Three-piece.html">
+    <div class="category-card"><a href="../Three piece/index.html">
         <div class="image-frame"> <img src="IMG_7653.jpeg" alt="Three-piece"></div>
     </a>
     <span class="Names">Three-piece</span>
