--- a/suit website/index.html
+++ b/suit website/index.html
@@ -35,7 +35,7 @@
     <span class="Names">Three-piece</span>
     </div>
 
-    <div class="category-card"><a href="Tuxedo.html">
+    <div class="category-card"><a href="../Tuxedo/index.html">
         <div class="image-frame"> <img src="IMG_7656.jpeg" alt="Tuxedo"></div>
     </a>
     <span class="Names">Tuxedo</span>
