--- a/Double breasted/index.html
+++ b/Double breasted/index.html
@@ -116,6 +116,306 @@
         </div>
 
 
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+        
+
+        <div class="category-cards">
+            <div class="image-frame">
+                <img src="images/IMG_7755.jpeg" alt="Double-breasted" class="main-image">
+            </div>
+            <div class="dots-container">
+            </div>
+            <span class="Names"> Pinstripe suit</span>
+        </div>
+
+
+
+
 
 
     </div>
@@ -126,16 +426,47 @@
 
 <script>// Array of images per card
 const cardImages = [
-    ["images/IMG_7644.jpeg","images/IMG_7655.jpeg","images/IMG_7656.jpeg","images/IMG_7678.jpeg","images/IMG_7679.jpeg"],
-    ["images/IMG_7701.jpeg","images/IMG_7702.jpeg","images/IMG_7703.jpeg"],
-    ["images/IMG_7715.jpeg","images/IMG_7712.jpeg","images/IMG_7713.jpeg","images/IMG_7714.jpeg"],
-    ["images/IMG_7704.jpeg","images/IMG_7705.jpeg","images/IMG_7706.jpeg"],
-    ["images/IMG_7730.jpeg","images/IMG_7728.jpeg","images/IMG_7729.jpeg"],
-    ["images/IMG_7708.jpeg","images/IMG_7711.jpeg","images/IMG_7707.jpeg","images/IMG_7709.jpeg"],
-    ["images/IMG_7718.jpeg","images/IMG_7716.jpeg","images/IMG_7719.jpeg","images/IMG_7720.jpeg","images/IMG_7721.jpeg"],
-    ["images/IMG_7725.jpeg","images/IMG_7724.jpeg","images/IMG_7726.jpeg","images/IMG_7727.jpeg"],
-    ["images/IMG_7751.jpeg","images/IMG_7746.jpeg","images/IMG_7747.jpeg","images/IMG_7748.jpeg","images/IMG_7750.jpeg","images/IMG_7752.jpeg","images/IMG_7753.jpeg"],
-    ["images/IMG_7755.jpeg","images/IMG_7756.jpeg","images/IMG_7757.jpeg"]
+    ["images/IMG_7644.jpeg"],
+    ["images/IMG_7655.jpeg"],
+    ["images/IMG_7656.jpeg"],
+    ["images/IMG_7678.jpeg"],
+    ["images/IMG_7679.jpeg"],
+    ["images/IMG_7701.jpeg"],
+    ["images/IMG_7702.jpeg"],
+    ["images/IMG_7703.jpeg"],
+    ["images/IMG_7715.jpeg"],
+    ["images/IMG_7712.jpeg"],
+    ["images/IMG_7713.jpeg"],
+    ["images/IMG_7714.jpeg"],
+    ["images/IMG_7704.jpeg"],
+    ["images/IMG_7705.jpeg"],
+    ["images/IMG_7706.jpeg"],
+    ["images/IMG_7730.jpeg"],
+    ["images/IMG_7728.jpeg"],
+    ["images/IMG_7729.jpeg"],
+    ["images/IMG_7708.jpeg"],
+    ["images/IMG_7711.jpeg"],
+    ["images/IMG_7707.jpeg"],
+    ["images/IMG_7709.jpeg"],
+    ["images/IMG_7718.jpeg"],
+    ["images/IMG_7716.jpeg"],
+    ["images/IMG_7719.jpeg"],
+    ["images/IMG_7720.jpeg"],
+    ["images/IMG_7721.jpeg"],
+    ["images/IMG_7725.jpeg"],
+    ["images/IMG_7724.jpeg"],
+    ["images/IMG_7726.jpeg"],
+    ["images/IMG_7727.jpeg"],
+    ["images/IMG_7751.jpeg"],
+    ["images/IMG_7746.jpeg"],
+    ["images/IMG_7747.jpeg"],
+    ["images/IMG_7748.jpeg"],
+    ["images/IMG_7750.jpeg"],
+    ["images/IMG_7752.jpeg"],
+    ["images/IMG_7753.jpeg"],
+    ["images/IMG_7755.jpeg"],
+    ["images/IMG_7756.jpeg"],
+    ["images/IMG_7757.jpeg"],
     // Add more arrays for new cards
 ];
 
@@ -144,20 +475,10 @@ document.querySelectorAll('.category-cards').forEach((card, index) => {
     const mainImage = card.querySelector('.main-image');
     let currentIndex = 0;
 
-    // Generate dots
-    const dotsContainer = card.querySelector('.dots-container');
-    cardImages[index].forEach((_, i) => {
-        const dot = document.createElement('span');
-        dot.classList.add('dot');
-        if(i === 0) dot.classList.add('active'); // first dot active
-        dotsContainer.appendChild(dot);
-    });
-    const dots = dotsContainer.querySelectorAll('.dot');
-
+   
     // Update image + dots
     function updateImage() {
         mainImage.src = cardImages[index][currentIndex];
-        dots.forEach((dot, i) => dot.classList.toggle('active', i === currentIndex));
     }
 
     // Swipe + zoom detection
