--- a/Three piece/index.html
+++ b/Three piece/index.html
@@ -123,6 +123,39 @@ const cardImages = [
   { name: "Garlando suit", image: "images/IMG_7937.jpeg" },
   { name: "Garlando suit", image: "images/IMG_7938.jpeg" },
   { name: "Garlando suit", image: "images/IMG_7939.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8072.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8073.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8074.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8089.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8090.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8091.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8092.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8093.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8095.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8096.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8102.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8103.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8104.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8105.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8106.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8107.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8108.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8109.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8110.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8111.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8112.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8113.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8114.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8115.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8116.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8117.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8118.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8159.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8160.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8161.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8163.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8164.jpeg" },
+  { name: "Garlando suit", image: "images/IMG_8165.jpeg" },
 
 
 
