--- a/suit website/index.html
+++ b/suit website/index.html
@@ -41,7 +41,7 @@
     <span class="Names">Tuxedo</span>
     </div>
 
-    <div class="category-card"><a href="Two-piece.html">
+    <div class="category-card"><a href="../Two piece/index.html">
         <div class="image-frame"> <img src="IMG_7655.jpeg" alt="Two-piece"></div>
     </a>
     <span class="Names">Two-piece</span>
