--- a/Ties/index.html
+++ b/Ties/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../suit website/style.css">
 </head>
 <body>
-    <h2 class="breasted"> TUXEDOS</h2>
+    <h2 class="breasted"> TIES</h2>
 
    <div class="CATEGORIES"></div>
 
@@ -31,70 +31,70 @@
 
 <script>// Array of images per card
 const cardImages = [
-   { name: "Marco Lorenzo Tux (White)", image: "images/IMG_8127.jpeg" }, 
-   { name: "Marco Lorenzo Tux (Black)", image: "images/IMG_8128.jpeg" },  
-   { name: "Piped Shawl Tux (White)", image: "images/IMG_8129.jpeg" },  
-   { name: "Piped Shawl Tux (Black)", image: "images/IMG_8130.jpeg" },  
-   { name: "Embellished Tux (White)", image: "images/IMG_8131.jpeg" },  
-   { name: "Embellished Tux (Black)", image: "images/IMG_8132.jpeg" },  
-   { name: "Sequined Lapel Tux (Black)", image: "images/IMG_8133.jpeg" },  
-   { name: "Starburst Tux (Blue)", image: "images/IMG_8134.jpeg" },  
-   { name: "Starburst Tux (Black)", image: "images/IMG_8135.jpeg" },  
-   { name: "Starburst Tux (White)", image: "images/IMG_8136.jpeg" },  
-   { name: "Starburst Tux (Gold)", image: "images/IMG_8137.jpeg" },  
-   { name: "Double-breasted Shawl", image: "images/IMG_8055.jpeg" },  
-   { name: "Double-breasted Peak (Black)", image: "images/IMG_8138.jpeg" },  
-   { name: "Double-Breasted Peak (White)", image: "images/IMG_8139.jpeg" },  
-   { name: "Sparkle Shawl Tux", image: "images/IMG_8140.jpeg" },  
-   { name: "Paisley Tux (Blue)", image: "images/IMG_8141.jpeg" },  
-   { name: "Paisley Tux (Black)", image: "images/IMG_8142.jpeg" },  
-   { name: "Paisley Tux (Red)", image: "images/IMG_8143.jpeg" },  
-   { name: "Paisley Tux (Purple)", image: "images/IMG_8144.jpeg" },  
-   { name: "Paisley Tux (Light Blue)", image: "images/IMG_8145.jpeg" },  
-   { name: "Paisley Tux (Beige)", image: "images/IMG_8056.jpeg" },  
-   { name: "Paisley Tux (White)", image: "images/IMG_8048.jpeg" },  
-   { name: "Paisley (Mario Casas) White", image: "images/IMG_8049.jpeg" },  
-   { name: "Paisley (Mario Casas) Red", image: "images/IMG_8050.jpeg" },   
-   { name: "Paisley (Mario Casas) Blue", image: "images/IMG_8052.jpeg" },  
-   { name: "Paisley (Mario Casas) Black", image: "images/IMG_8053.jpeg" },  
-   { name: "Paisley (Mario Casas) Green", image: "images/IMG_8054.jpeg" },  
-   { name: "Bilbao (Black)", image: "images/IMG_8057.jpeg" },  
-   { name: "Bilbao (White)", image: "images/IMG_8058.jpeg" },  
-   { name: "Plain Three-piece Tux (Black)", image: "images/IMG_8059.jpeg" },  
-   { name: "Plain Three-piece Tux (Burgundy)", image: "images/IMG_8060.jpeg" },  
-   { name: "Jacquard Tux (Black)", image: "images/11.jpeg" },  
-   { name: "Jacquard Tux (Beige)", image: "images/IMG_1.jpeg" },  
-   { name: "Jacquard Tux (Green)", image: "images/2.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/3.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/4.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/5.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/6.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/7.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/8.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/9.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/10.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/11.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/12.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/13.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/14.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/15.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/16.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/17.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/18.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/19.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/20.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/21.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/22.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/23.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/24.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/25.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/26.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/27.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/28.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/29.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/30.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/31.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/32.jpeg" },  
+   { name: "", image: "images/IMG_8127.jpeg" }, 
+   { name: "", image: "images/IMG_8128.jpeg" },  
+   { name: "", image: "images/IMG_8129.jpeg" },  
+   { name: "", image: "images/IMG_8130.jpeg" },  
+   { name: "", image: "images/IMG_8131.jpeg" },  
+   { name: "", image: "images/IMG_8132.jpeg" },  
+   { name: "", image: "images/IMG_8133.jpeg" },  
+   { name: "", image: "images/IMG_8134.jpeg" },  
+   { name: "", image: "images/IMG_8135.jpeg" },  
+   { name: "", image: "images/IMG_8136.jpeg" },  
+   { name: "", image: "images/IMG_8137.jpeg" },  
+   { name: "", image: "images/IMG_8055.jpeg" },  
+   { name: "", image: "images/IMG_8138.jpeg" },  
+   { name: "", image: "images/IMG_8139.jpeg" },  
+   { name: "", image: "images/IMG_8140.jpeg" },  
+   { name: "", image: "images/IMG_8141.jpeg" },  
+   { name: "", image: "images/IMG_8142.jpeg" },  
+   { name: "", image: "images/IMG_8143.jpeg" },  
+   { name: "", image: "images/IMG_8144.jpeg" },  
+   { name: "", image: "images/IMG_8145.jpeg" },  
+   { name: "", image: "images/IMG_8056.jpeg" },  
+   { name: "", image: "images/IMG_8048.jpeg" },  
+   { name: "", image: "images/IMG_8049.jpeg" },  
+   { name: "", image: "images/IMG_8050.jpeg" },   
+   { name: "", image: "images/IMG_8052.jpeg" },  
+   { name: "", image: "images/IMG_8053.jpeg" },  
+   { name: "", image: "images/IMG_8054.jpeg" },  
+   { name: "", image: "images/IMG_8057.jpeg" },  
+   { name: "", image: "images/IMG_8058.jpeg" },  
+   { name: "", image: "images/IMG_8059.jpeg" },  
+   { name: "", image: "images/IMG_8060.jpeg" },  
+   { name: "", image: "images/11.jpeg" },  
+   { name: "", image: "images/IMG_1.jpeg" },  
+   { name: "", image: "images/2.jpeg" },
+   { name: "", image: "images/3.jpeg" },
+   { name: "", image: "images/4.jpeg" },
+   { name: "", image: "images/5.jpeg" },
+   { name: "", image: "images/6.jpeg" },
+   { name: "", image: "images/7.jpeg" },
+   { name: "", image: "images/8.jpeg" },
+   { name: "", image: "images/9.jpeg" },
+   { name: "", image: "images/10.jpeg" },
+   { name: "", image: "images/11.jpeg" },
+   { name: "", image: "images/12.jpeg" },
+   { name: "", image: "images/13.jpeg" },
+   { name: "", image: "images/14.jpeg" },
+   { name: "", image: "images/15.jpeg" },
+   { name: "", image: "images/16.jpeg" },
+   { name: "", image: "images/17.jpeg" },
+   { name: "", image: "images/18.jpeg" },
+   { name: "", image: "images/19.jpeg" },
+   { name: "", image: "images/20.jpeg" },
+   { name: "", image: "images/21.jpeg" },
+   { name: "", image: "images/22.jpeg" },
+   { name: "", image: "images/23.jpeg" },
+   { name: "", image: "images/24.jpeg" },
+   { name: "", image: "images/25.jpeg" },
+   { name: "", image: "images/26.jpeg" },
+   { name: "", image: "images/27.jpeg" },
+   { name: "", image: "images/28.jpeg" },
+   { name: "", image: "images/29.jpeg" },
+   { name: "", image: "images/30.jpeg" },
+   { name: "", image: "images/31.jpeg" },
+   { name: "", image: "images/32.jpeg" },  
     
 
     // Add more arrays for new cards
