--- a/suit website/index.html
+++ b/suit website/index.html
@@ -53,7 +53,7 @@
     <span class="Names">Corporate shirts</span>
     </div>
 
-    <div class="category-card"><a href="Ties.html">
+    <div class="category-card"><a href="../Ties/index.html">
         <div class="image-frame"> <img src="IMG_7677.jpeg" alt="Ties"></div>
     </a>
     <span class="Names">Ties</span>
