--- a/suit website/index.html
+++ b/suit website/index.html
@@ -47,7 +47,7 @@
     <span class="Names">Two-piece</span>
     </div>
 
-    <div class="category-card"><a href="Corporate shirts.html">
+    <div class="category-card"><a href="../Shirts/index.html">
         <div class="image-frame"> <img src="IMG_7657.jpeg" alt="Corporate shirts"></div>
     </a>
     <span class="Names">Corporate shirts</span>
