--- a/suit website/index.html
+++ b/suit website/index.html
@@ -15,9 +15,8 @@
 <div class="menu-icon" id="menu-icon">&#9776;</div>
 <div id="menu">
     <a href="index.html">Home</a>
-    <a href="contact.html">Contact Us</a>
-    <a href="Our store.html">Our store</a>
-    <a href="size Guidlines.html">Size Guidlines</a>
+    <a href="../Store/index.html">Our store</a>
+    <a href="../Size Guideline/index.html">Size Guidlines</a>
 </div>
 </header>
 
@@ -69,7 +68,7 @@
 
 </p>
 
-<a href="Our store.html" class="read-more">Read More</a>
+<a href="../Store/index.html" class="read-more">Read More</a>
 <hr>
 
 <h2 class="Guidlines">Size Guidlines</h2>
@@ -77,7 +76,7 @@
     We cretaed a guidline section so customers can best pick their size.
     If you don't know it no need to panic, We are always here to help.  </p>
 
-    <a href="Our store.html" class="read-more">Read More</a>
+    <a href="../Size Guideline/index.html" class="read-more">Read More</a>
     <hr>
     <h2>Contact us</h2>
     <div class="container">
